# OS-Recon

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/engines/: ai_engine.py  git_engine.py  pry_engine.py  social_engine.py
backend/engines/enrichment/: __init__.py  dehashed.py  hibp.py  hunter.py  shodan.py  virustotal.py
backend/engines/payloads/: payload_store.py
backend/utils/: security.py
frontend/src/: App.tsx
frontend/src/components/: AIAnalysisPanel.tsx  AnalyticsOverview.tsx  AnalyticsTab.tsx  EnrichmentPanel.tsx  OverviewTab.tsx  RepoTable.tsx  SocialOverview.tsx  SocialResults.tsx
frontend/src/context/: ScannerContext.tsx
