[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi[standard]>=0.138.0",
    "httpx>=0.28.1",
    "nodriver>=0.50.3",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
